--- a/style.css
+++ b/style.css
@@ -1,21 +1,29 @@
 :root {
-    --branco-principal: #FFFFFF;
-    --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BF7;
+    --branco: #FFFFFF;
+    --cinza: #C0C0C0;
+    --botao-azul: #167bF7;
     --cor-de-fundo: #00030C;
     }
     
-    body {
+    body{
     background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
+    color: var(--branco);
     }
-
+    
     .principal{
-        background-image: url(img/background.png);
-        background-repeat: no-repeat;
-        background-size: contain;
+    background-image: url(img/Background.png);
+    background-repeat: no-repeat;
+    background-size: contain;
     }
     
     .container{
-        height: 100vh;
+    height: 100vh;
+    }
+    
+    .container-botao{
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco);
+    display: block;
     }
